[package]
name = "mango-limit-orders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []
devnet = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.9.14"
arrayref = "0.3.6"
spl-token = {version = "3.0.1", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "1.0.2", features = ["no-entrypoint"]}
num-derive = "0.3.3"
thiserror = "1.0.30"
num-traits = "0.2.14"
bytemuck = "1.8.0"
serum_dex = { version = "=0.4.0", git = "https://github.com/blockworks-foundation/serum-dex.git", features=["no-entrypoint", "program"] }
mango = {  version = "3.4.2", git = "https://github.com/blockworks-foundation/mango-v3.git", default-features=false, features = ["no-entrypoint"], branch="main" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
